[package]
name = "ferrischat_snowflake_generator"
version = "1.0.1"
authors = ["FerrisChat Team <crates@ferris.chat>"]
edition = "2021"
description = "Library to generate guaranteed unique IDs for any purpose"
license = "Unlicense"
documentation = "https://docs.rs/ferrischat_snowflake_generator"
homepage = "https://ferris.chat"
repository = "https://github.com/FerrisChat/SnowflakeGenerator"
include = [
  "**/*.rs",
  "Cargo.toml",
  "/.gitignore",
  "/LICENSE",
  "/README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
time-safety-checks = []
default = ["time-safety-checks"]

[dependencies]
